--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="button button--right">
                         <i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i>
                     </div>
-                    <div class="button button--work">WORK WITH US</div>
+                    <div class="button button--work">OUR APPROACH</div>
                 </div>
             </div>
         </div>
@@ -90,10 +90,16 @@
                     <div class="button button--right">
                         <i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i>
                     </div>
-                    <div class="button button--work">WORK WITH US</div>
+                    <div class="button button--w">LIFE AT ISO</div>
                 </div>
             </div>
             <img src="four.png" alt="backgrond image" clas="image image--two">
+        </div>
+        <div class="grid">
+            <div class="item item-1">1</div>
+            <div class="item item-2">2</div>
+            <div class="item item-3">3</div>
+            <div class="item item-4">4</div>
         </div>
     </main>
 </body>
