--- a/index.html
+++ b/index.html
@@ -96,10 +96,31 @@
             <img src="four.png" alt="backgrond image" clas="image image--two">
         </div>
         <div class="grid">
-            <div class="item item-1">1</div>
-            <div class="item item-2">2</div>
-            <div class="item item-3">3</div>
-            <div class="item item-4">4</div>
+            <div class="item item-1">Latest from Iso</div>
+            <div class="item item-2">
+                <ul>
+                    <li>BLOG</li>
+                    <li>30.7.2024</li>
+                    <li>BY PASCAL SAVY</li>
+                </ul>
+                <p>Using our state-of-the-art AI models to power drug design</p>
+            </div>
+            <div class="item item-3">
+                <ul>
+                    <li>BLOG</li>
+                    <li>8.5.2024</li>
+                    <li>BY MAX JADERBERG, ADRIAN STECULA, PASCAL SAVY</li>
+                </ul>
+                <p>Rational drug design with AlphaFold 3</p>
+            </div>
+            <div class="item item-4">
+                <ul>
+                    <li>BLOG</li>
+                    <li>8.5.2024</li>
+                    <li>BY ISOMORPHIC LABS AND THE GOOGLE DEEPMIND ALPHAFOLD TEAM</li>
+                </ul>
+                <p>AlphaFold 3 predicts the structure and interactions of all of life’s molecules</p>
+            </div>
         </div>
     </main>
 </body>
