--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
                     <li>BY PASCAL SAVY</li>
                 </ul>
                 <p>Using our state-of-the-art AI models to power drug design</p>
+                <div class="read">
+                    <div class= button-final><i class="fa-solid fa-arrow-right"></i></div>
+                    <p class="read-label">READ MORE</p>
+                </div>
             </div>
             <div class="item item-3">
                 <ul>
@@ -112,6 +116,10 @@
                     <li>BY MAX JADERBERG, ADRIAN STECULA, PASCAL SAVY</li>
                 </ul>
                 <p>Rational drug design with AlphaFold 3</p>
+                <div class="read-2">
+                    <div class= button-final-2><i class="fa-solid fa-arrow-right"></i></div>
+                    <p class="read-label-2">READ MORE</p>
+                </div>
             </div>
             <div class="item item-4">
                 <ul>
@@ -120,6 +128,10 @@
                     <li>BY ISOMORPHIC LABS AND THE GOOGLE DEEPMIND ALPHAFOLD TEAM</li>
                 </ul>
                 <p>AlphaFold 3 predicts the structure and interactions of all of life’s molecules</p>
+                <div class="read-3">
+                    <div class= button-final-3><i class="fa-solid fa-arrow-right"></i></div>
+                    <p class="read-label-3">READ MORE</p>
+                </div>
             </div>
         </div>
     </main>
