--- a/index.html
+++ b/index.html
@@ -129,10 +129,14 @@
                 </ul>
                 <p>AlphaFold 3 predicts the structure and interactions of all of life’s molecules</p>
                 <div class="read-3">
-                    <div class= button-final-3><i class="fa-solid fa-arrow-right"></i></div>
-                    <p class="read-label-3">READ MORE</p>
+                    <div class="button-final-3"><i class="fa-solid fa-arrow-right"></i></div>
+                    <p class="smile">READ MORE</p>
                 </div>
             </div>
+        </div>
+        <div class="read-n">
+            <div class= button-final-n><i class="fa-solid fa-arrow-right"></i></div>
+            <p class="read-label-n">GO TO NEWS INDEX</p>
         </div>
     </main>
 </body>
