--- a/index.html
+++ b/index.html
@@ -139,5 +139,8 @@
             <p class="read-label-n">GO TO NEWS INDEX</p>
         </div>
     </main>
+    <footer>
+        <img src="five.png" alt="background image" class="five-img">
+    </footer>
 </body>
 </html>
