--- a/index.html
+++ b/index.html
@@ -141,6 +141,19 @@
     </main>
     <footer>
         <img src="five.png" alt="background image" class="five-img">
+        <div class="container">
+            <div class="footer-grid">
+                <div class="itemm itemm1">1</div>
+                <div class="itemm itemm2">2</div>
+                <div class="itemm itemm3">3</div>
+                <div class="itemm itemm4">4</div>
+                <div class="itemm itemm5">5</div>
+                <div class="itemm itemm6">6</div>
+                <div class="itemm itemm7">7</div>
+                <div class="itemm itemm8">8</div>
+                <div class="itemm itemm9">9</div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
