white logo change

--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@
     <footer>
         <img src="five.png" alt="background image" class="five-img">
         <div class="container">
+            <div class="logo-grid-2">
+                <div class="item1-2"><a href="nav.html"><img src="white.png" class=logo-2 alt="company logo"></a></div>
+                <div class="item2-2"><a href="nav.html">Isomorphic</a></div>
+                <div class="item3-2"><a href="nav.html">Labs</a></div>
+            </div>
             <div class="footer-grid">
                 <div class="itemm itemm1">1</div>
                 <div class="itemm itemm2">2</div>
