--- a/index.html
+++ b/index.html
@@ -148,15 +148,26 @@
                 <div class="item3-2"><a href="nav.html">Labs</a></div>
             </div>
             <div class="footer-grid">
-                <div class="itemm itemm1">1</div>
-                <div class="itemm itemm2">2</div>
-                <div class="itemm itemm3">3</div>
-                <div class="itemm itemm4">4</div>
-                <div class="itemm itemm5">5</div>
-                <div class="itemm itemm6">6</div>
-                <div class="itemm itemm7">7</div>
-                <div class="itemm itemm8">8</div>
-                <div class="itemm itemm9">9</div>
+                <div class="itemm itemm1">© 2022 ISOMORPHIC LABS</div>
+                <div class="itemm itemm2">HOME</div>
+                <div class="itemm itemm3">ABOUT US</div>
+                <div class="itemm itemm4">OUR APPROACH</div>
+                <div class="itemm itemm5">LIFE AT ISO</div>
+                <div class="itemm itemm6">WORK WITH US</div>
+                <div class="itemm itemm7">NEWS</div>
+                <div class="itemm itemm8">
+                    <p>CONTACT US</p>
+                    <p class="texxt">press@isomorphiclabs</p>
+                    <p>connecting@isomorphiclabs</p>
+                </div>
+                <div class="itemm itemm9">
+                    <p>INFO</p>
+                    <p class="textt">Privacy Policy</p>
+                    <p>Cookie Policy</p>
+                    <p>Terms & Conditions</p>
+                    <p>Supplier Code of Conduct</p>
+                    <p>ABC</p>
+                </div>
             </div>
         </div>
     </footer>
