cookie preferences button

--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
             <div class= button-final-n><i class="fa-solid fa-arrow-right"></i></div>
             <p class="read-label-n">GO TO NEWS INDEX</p>
         </div>
+        <img src="five.png" alt="background image" class="five-img">
     </main>
     <footer>
-        <img src="five.png" alt="background image" class="five-img">
         <div class="container">
             <div class="logo-grid-2">
                 <div class="item1-2"><a href="nav.html"><img src="white.png" class=logo-2 alt="company logo"></a></div>
@@ -171,5 +171,6 @@
             </div>
         </div>
     </footer>
+    <button class="fixed-button">COOKIE PREFERENCES</button>
 </body>
 </html>
