--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
     </div>
     <header class="nav">
         <div class="logo-grid">
-            <div class="item1"><a href="nav.html"><img src="logo.png" class=logo alt="company logo"></a></div>
-            <div class="item2"><a href="nav.html">Isomorphic</a></div>
-            <div class="item3"><a href="nav.html">Labs</a></div>
+            <div class="item1"><a href="#"><img src="logo.png" class=logo alt="company logo"></a></div>
+            <div class="item2"><a href="#">Isomorphic</a></div>
+            <div class="item3"><a href="#">Labs</a></div>
         </div>
         <nav class="nav-right">
             <ul>
-                <li><a href="nav.html">About Us</a></li>
-                <li><a href="nav.html">Our Approach</a></li>
-                <li><a href="nav.html">Life at Iso</a></li>
-                <li><a href="nav.html">Work With Us</a></li>
-                <li><a href="nav.html">News</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Our Approach</a></li>
+                <li><a href="#">Life at Iso</a></li>
+                <li><a href="#">Work With Us</a></li>
+                <li><a href="#">News</a></li>
             </ul>
         </nav>
     </header>
@@ -61,10 +61,10 @@
                 <p class="headline">OUR GOAL</p> <br>
                 <p class="text">We’re using machine learning to transform drug discovery.</p>
                 <div class="buttons">
-                    <div class="button button--right">
+                    <div class="button2 button--right">
                         <i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i>
                     </div>
-                    <div class="button button--work">WORK WITH US</div>
+                    <div class="button2 button--work">WORK WITH US</div>
                 </div>
             </div>
             <img src="two.png" alt="backgrond image" clas="image image--two">
@@ -75,10 +75,10 @@
                 <p class="headline">OUR HERITAGE</p> <br>
                 <p class="text">DeepMind and AlphaFold broke new ground. Iso is building on it.</p>
                 <div class="buttons">
-                    <div class="button button--right">
+                    <div class="button2 button--right">
                         <i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i>
                     </div>
-                    <div class="button button--work">OUR APPROACH</div>
+                    <div class="button2 button--work">OUR APPROACH</div>
                 </div>
             </div>
         </div>
@@ -87,10 +87,10 @@
                 <p class="headline">OUR CULTURE</p> <br>
                 <p class="text">Learn what it’s like to work here.</p>
                 <div class="buttons">
-                    <div class="button button--right">
+                    <div class="button2 button--right">
                         <i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i>
                     </div>
-                    <div class="button button--w">LIFE AT ISO</div>
+                    <div class="button2 button--w">LIFE AT ISO</div>
                 </div>
             </div>
             <img src="four.png" alt="backgrond image" clas="image image--two">
@@ -105,7 +105,7 @@
                 </ul>
                 <p>Using our state-of-the-art AI models to power drug design</p>
                 <div class="read">
-                    <div class= button-final><i class="fa-solid fa-arrow-right"></i></div>
+                    <div class="button button-final"><i class="fa-solid fa-arrow-right"></i></div>
                     <p class="read-label">READ MORE</p>
                 </div>
             </div>
@@ -117,7 +117,7 @@
                 </ul>
                 <p>Rational drug design with AlphaFold 3</p>
                 <div class="read-2">
-                    <div class= button-final-2><i class="fa-solid fa-arrow-right"></i></div>
+                    <div class="button button-final-2"><i class="fa-solid fa-arrow-right"></i></div>
                     <p class="read-label-2">READ MORE</p>
                 </div>
             </div>
@@ -129,13 +129,13 @@
                 </ul>
                 <p>AlphaFold 3 predicts the structure and interactions of all of life’s molecules</p>
                 <div class="read-3">
-                    <div class="button-final-3"><i class="fa-solid fa-arrow-right"></i></div>
+                    <div class="button button-final-3"><i class="fa-solid fa-arrow-right"></i></div>
                     <p class="smile">READ MORE</p>
                 </div>
             </div>
         </div>
         <div class="read-n">
-            <div class= button-final-n><i class="fa-solid fa-arrow-right"></i></div>
+            <div class="button button-final-n"><i class="fa-solid fa-arrow-right"></i></div>
             <p class="read-label-n">GO TO NEWS INDEX</p>
         </div>
         <img src="five.png" alt="background image" class="five-img">
