--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
             src="https://player.vimeo.com/video/790839616?dnt=1&background=1&autoplay=1&loop=1&byline=0&title=0"
             frameborder="0" 
             allow="autoplay; fullscreen; picture-in-picture" 
-            allowfullscreen>
-    </iframe>
+            allowfullscreen></iframe>
     </div>
     <header class="nav">
         <div class="logo-grid">
-            <div class="item1"><a href="#"><img src="logo.png" class=logo alt="company logo"></a></div>
+            <div class="item1"><a href="#"><img src="logo.png" class="logo" alt="company logo"></a></div>
             <div class="item2"><a href="#">Isomorphic</a></div>
             <div class="item3"><a href="#">Labs</a></div>
         </div>
@@ -49,7 +48,7 @@
     <div class="button button--down">
         <i class="fa-solid fa-arrow-down"></i>
     </div>
-    <main class="main">
+    <section class="main">
         <div class="section section--one">
             <img src="one.png" alt="background image" class="image image--one">
             <p class="paragraph">We believe there’s a fundamental symmetry in the universe between biology and information science. And we’re building the team, and the platform, that will find it.
@@ -67,10 +66,10 @@
                     <div class="button2 button--work">WORK WITH US</div>
                 </div>
             </div>
-            <img src="two.png" alt="backgrond image" clas="image image--two">
+            <img src="two.png" alt="background image" class="image image--two">
         </div>
         <div class="section section--three">
-            <img src="three.png" alt="backgrond image" clas="image image--two">
+            <img src="three.png" alt="background image" class="image image--two">
             <div class="open open--two">
                 <p class="headline">OUR HERITAGE</p> <br>
                 <p class="text">DeepMind and AlphaFold broke new ground. Iso is building on it.</p>
@@ -93,7 +92,7 @@
                     <div class="button2 button--w">LIFE AT ISO</div>
                 </div>
             </div>
-            <img src="four.png" alt="backgrond image" clas="image image--two">
+            <img src="four.png" alt="background image" class="image image--two">
         </div>
         <div class="grid">
             <div class="item item-1">Latest from Iso</div>
@@ -139,11 +138,11 @@
             <p class="read-label-n">GO TO NEWS INDEX</p>
         </div>
         <img src="five.png" alt="background image" class="five-img">
-    </main>
+    </section>
     <footer>
         <div class="container">
             <div class="logo-grid-2">
-                <div class="item1-2"><a href="nav.html"><img src="white.png" class=logo-2 alt="company logo"></a></div>
+                <div class="item1-2"><a href="nav.html"><img src="white.png" class="logo-2" alt="company logo"></a></div>
                 <div class="item2-2"><a href="nav.html">Isomorphic</a></div>
                 <div class="item3-2"><a href="nav.html">Labs</a></div>
             </div>
@@ -157,12 +156,12 @@
                 <div class="itemm itemm7">NEWS</div>
                 <div class="itemm itemm8">
                     <p>CONTACT US</p>
-                    <p class="texxt">press@isomorphiclabs</p>
+                    <p class="text-3">press@isomorphiclabs</p>
                     <p>connecting@isomorphiclabs</p>
                 </div>
                 <div class="itemm itemm9">
                     <p>INFO</p>
-                    <p class="textt">Privacy Policy</p>
+                    <p class="text-4">Privacy Policy</p>
                     <p>Cookie Policy</p>
                     <p>Terms & Conditions</p>
                     <p>Supplier Code of Conduct</p>
