--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
     <footer>
         <div class="container">
             <div class="logo-grid-2">
-                <div class="item1-2"><a href="nav.html"><img src="white.png" class="logo-2" alt="company logo"></a></div>
-                <div class="item2-2"><a href="nav.html">Isomorphic</a></div>
-                <div class="item3-2"><a href="nav.html">Labs</a></div>
+                <div class="item1-2"><a href="#"><img src="white.png" class="logo-2" alt="company logo"></a></div>
+                <div class="item2-2"><a href="#">Isomorphic</a></div>
+                <div class="item3-2"><a href="#">Labs</a></div>
             </div>
             <div class="footer-grid">
                 <div class="itemm itemm1">© 2022 ISOMORPHIC LABS</div>
